--- a/boot/OrangePiZero2W/uboot/install
+++ b/boot/OrangePiZero2W/uboot/install
@@ -10,5 +10,5 @@ if [ $# -ne 1 ]; then
 fi
 
 sudo umount /dev/${1}1
-
+sudo dd if=/dev/zero of=/dev/${1} bs=512 seek=16 count=2032
 sudo dd if=u-boot-sunxi-with-spl.bin of=/dev/${1} bs=512 seek=16
